# wiimotedev

./: .astylerc  .clang-format  .clang-tidy  .gitmodules  AUTHORS  CHANGELOG  CMakeLists.txt  FindBluetooth.cmake  FindCWiiD.cmake  README  README.md  Version.cmake  astyle.sh  config.h.in  format.sh  version  wiimotedev.pro
addons/qwiimotedev/: CMakeLists.txt  main.cpp
addons/register/: CMakeLists.txt
addons/toolkit/: CMakeLists.txt  main.cpp
config/: CMakeLists.txt  FindCWiiD.cmake  Version.cmake  client.conf  org.wiimotedev-daemon.conf  org.wiimotedev-io.conf  org.wiimotedev-uinput.conf  scancode.conf  uinput-load  wiimotedev.conf
daemon/: CMakeLists.txt  Doxyfile  classicmessages.cpp  daemon.cpp  features.cpp  main.cpp  nunchukmessages.cpp  settings.cpp  settings.h  virtualcursor.cpp  virtualcursor.h  wiimotedevconnection.cpp  wiimotedevconnection.h  wiimotedevcore.cpp  wiimotedevcore.h  wiimotedevdevice.cpp  wiimotedevdevice.h  wiimotedevice.cpp  wiimotedevice.h  wiimotedevsettings.cpp  wiimotedevsettings.h  wiimotemanager.cpp  wiimotemanager.h  wiimotemessages.cpp  wiimotemessagethread.cpp  wiimotemessagethread.h  wiimotemesssagethread.cpp  wiimotemesssagethread.h
daemon/api/: cwiid-api.cpp  cwiid-api.h  cwiid-controller.cpp  cwiid-controller.h  cwiid-manager.cpp  cwiid-manager.h  xwiimote-api.cpp  xwiimote-api.h  xwiimote-controller.cpp  xwiimote-controller.h  xwiimote-manager.cpp  xwiimote-manager.h  xwiimote-monitor.cpp  xwiimote-monitor.h
daemon/containers/: accelerometer-container.cpp  accelerometer-container.h  button-container.cpp  button-container.h  gyroscope-container.cpp  gyroscope-container.h  infrared-container.cpp  infrared-container.h  pressure-container.cpp  pressure-container.h  status-container.cpp  status-container.h  stick-container.cpp  stick-container.h  structs.hpp
daemon/controllers/: wiimote-connector.cpp  wiimote-connector.h  wiimote-id-manager.cpp  wiimote-id-manager.h  wiimote-scanner-thread.cpp  wiimote-scanner-thread.h  wiimote-scanner.cpp  wiimote-scanner.h
daemon/dbus/: accelerometer.xml  balance-board-dispatcher.cpp  balance-board-dispatcher.h  balanceboard.xml  classic-dispatcher.cpp  classic-dispatcher.h  classic.xml  daemonservice.h  deviceevents.h  deviceevents.xml  devices-dispatcher.cpp  devices-dispatcher.h  infrared.xml  motionplus.xml  nunchuk-dispatcher.cpp  nunchuk-dispatcher.h  pro-controller-dispatcher.cpp  pro-controller-dispatcher.h  procontroller.xml  virtual-cursor-dispatcher.cpp  virtual-cursor-dispatcher.h  wiimote-dispatcher.cpp  wiimote-dispatcher.h  wiimote.cpp  wiimote.h  wiimote.xml
daemon/enums/: adaptor.cpp  adaptor.h  device-type.cpp  device-type.h  event.cpp  event.h
daemon/factories/: controller-manager-factory.cpp  controller-manager-factory.h  dispatcher-factory.cpp  dispatcher-factory.h
daemon/fancy/: fancy.cpp
daemon/functionals/: unique-id.h  virtual-cursor-processor.cpp  virtual-cursor-processor.h
daemon/interfaces/: icontainer-processor.cpp  icontainer-processor.h  icontainer.cpp  icontainer.h  iid-manager.cpp  iid-manager.h  iwiimote-api.cpp  iwiimote-api.h  iwiimote-manager.cpp  iwiimote-manager.h
daemon/messages/: classicmessages.cpp  motionplusmessages.cpp  nunchukmessages.cpp  wiimotemessages.cpp
daemon/virtualcursor/: virtualcursor.cpp  virtualcursor.h
dbus-1/: CMakeLists.txt  org.wiimotedev-daemon.conf  org.wiimotedev.conf
dbus-1/conf/: CMakeLists.txt  org.wiimotedev.daemon.conf  org.wiimotedev.io.conf
dbus-1/interfaces/: CMakeLists.txt  org.wiimotedev.balanceboard.xml  org.wiimotedev.classic.xml  org.wiimotedev.devices.xml  org.wiimotedev.nunchuk.xml  org.wiimotedev.procontroller.xml  org.wiimotedev.virtualcursor.xml  org.wiimotedev.wiimote.xml
examples/car/: CMakeLists.txt  car.cpp  car.h  main.cpp
headers/: CMakeLists.txt  consts.h  interface.h  proto.h
init.d/: CMakeLists.txt
init.d/archlinux/: CMakeLists.txt  wiimotedev-io
init.d/daemon/: CMakeLists.txt
init.d/debian/: CMakeLists.txt
init.d/gentoo/: CMakeLists.txt
init.d/slackware/: CMakeLists.txt  wiimotedev-daemon  wiimotedev-io
init.d/ubuntu/: CMakeLists.txt  wiimotedev-daemon
init.d/uinput/: CMakeLists.txt
initd/: CMakeLists.txt  wiimotedev
initd/debian/: wiimotedev-daemon
initd/gentoo/: wiimotedev  wiimotedev-daemon
initd/slackware/: wiimotedev-daemon
initd/ubuntu/: wiimotedev  wiimotedev-daemon
io/: CMakeLists.txt  Doxyfile  main.cpp  uinput.cpp
io/common/: tick-aligned-loop.cpp  tick-aligned-loop.h
io/container/: infrared-config.cpp  infrared-config.h  infrared-cursor.cpp  infrared-cursor.h  stick-container.cpp  stick-container.h
io/core/: profile-manager.cpp  profile-manager.h
io/dbus/: customjobs.h  profilemanager.h  uinputservice.h
io/documentation/: readme.txt
io/eiobase/: eioeventdevice.cpp  eioeventdevice.h  eiomousedevice.cpp  eiomousedevice.h  eiotouchscreen.cpp  eiotouchscreen.h  eiouinputobject.cpp  eiouinputobject.h
io/eioinfrared/: eioinfraredmouse.cpp  eioinfraredmouse.h
io/eiojoystick/: eioclassicjoystick.cpp  eioclassicjoystick.h  eiogamepadmanager.cpp  eiogamepadmanager.h  eionunchukjoystick.cpp  eionunchukjoystick.h  eiowiimotejoystick.cpp  eiowiimotejoystick.h
io/eiokeyboard/: eioremotekeyboard.cpp  eioremotekeyboard.h
io/eiomanager/: actions.cpp  eiojoystickassign.cpp  (+4 more)
libcwiid/: CMakeLists.txt  bluetooth.c
manager/: CMakeLists.txt  Doxyfile  main.cpp
src/: CMakeLists.txt  client.cpp  config.h.in  connectionmanager.cpp  connectionmanager.h  daemon.cpp  datalogger.cpp  datalogger.h  dbus_support.cpp  dbus_support.h  example-car.cpp  main.cpp  messageserver.cpp  messageserver.h  messagethread.cpp  messagethread.h  profilemanager.cpp  profilemanager.h  register.cpp  syslogsupport.h  tcp_support.cpp  tcp_support.h  toolkit.cpp  uinput.cpp  uinput.h  wiimoteconnection.cpp  wiimoteconnection.h  wiimotedev.h  wiimotedev_connection.cpp  wiimotedev_connection.h  wiimotedev_manager.cpp  wiimotedev_manager.h  wiimotedev_settings.cpp  wiimotedev_settings.h  wiimotedevproto.h
subprojects/: CMakeLists.txt
toolkit/: CMakeLists.txt  main.cpp
(+462 files in other folders)
